build page and stopping footer overlap.

--- a/stylesheets/custom-styles.css
+++ b/stylesheets/custom-styles.css
@@ -99,3 +99,36 @@ th {
         font-size: 11px;
     }
 }
+
+.build-artifact-group {
+    width: 47%;
+    float: left;
+    margin: 0 5px 0 5px;
+}
+
+.build-artifact-group th {
+    padding: 6px;
+}
+
+.build-artifact-group h1, h2, h3, h4 {
+    margin-top: 10px;
+}
+
+@media screen and (max-width: 830px) {
+
+    .build-artifact-group {
+        float: initial;
+        width: 100%;
+    }
+}
+
+@media screen and (max-height: 600px) and (min-width: 960px){
+    
+    footer {
+        border-top: 1px solid #ccc;
+        margin: 0 84px 0 320px;
+        padding: 0;
+        position: static;
+        width: auto;
+    }
+}
